# polybrain-server

./: .env  .gitignore  Cargo.toml  README.md  justfile
src/: auth.rs  database.rs  encryption.rs  error.rs  main.rs
src/api/: audio.rs  mod.rs  types.rs
src/auth/: encryption.rs  endpoints.rs  mod.rs  types.rs  util.rs
src/database/: endpoints.rs  mod.rs  types.rs  util.rs
src/util/: error.rs
