[package]
name = "polybrain-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
rocket = { version = "0.5.1", features = ["secrets"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8.0", features = ["v4"]}
