[package]
name = "polybrain-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
rocket = { version = "0.5.1", features = ["json"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8.0", features = ["v4"]}
mongodb = "2.8.2"
futures = "0.3.30"
log = "0.4.21"
aes = "0.7"
block-modes = "0.8"
block-padding = "0.2"
hex = "0.4"
sha2 = "0.10.8"
